salesforce/main/default/objects/Account/fields/FundOps_Brief__c.field-meta.xml
<CustomField>
    <label>FundOps Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>