salesforce/main/default/objects/Account/fields/FundOps_Data_Confidence__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Data_Confidence__c</fullName>
  <label>FundOps Data Confidence</label>
  <type>Percent</type><precision>5</precision><scale>2</scale>
</CustomField>