salesforce/main/default/objects/Account/fields/FundOps_Enabled__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Enabled__c</fullName>
  <label>FundOps Enabled</label>
  <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>