salesforce/main/default/objects/Account/fields/FundOps_External_Id__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <label>FundOps External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>