salesforce/main/default/objects/Account/fields/FundOps_IRS_EIN__c.field-meta.xml
<CustomField>
  <fullName>FundOps_IRS_EIN__c</fullName>
  <label>FundOps IRS EIN</label>
  <type>Text</type>
  <length>20</length>
  <description>Optional IRS Employer Identification Number for precise IRS 990 lookup. Format: 12-3456789.</description>
</CustomField>