salesforce/main/default/objects/Account/fields/FundOps_Last_Error__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Last_Error__c</fullName>
  <label>FundOps Last Error</label>
  <type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines>
</CustomField>