salesforce/main/default/objects/Account/fields/FundOps_Last_Refresh__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Last_Refresh__c</fullName>
  <label>FundOps Last Refresh</label>
  <type>DateTime</type>
</CustomField>