salesforce/main/default/objects/Account/fields/FundOps_Priority__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Priority__c</fullName>
  <label>FundOps Priority</label>
  <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Critical</fullName><default>false</default></value><value><fullName>High</fullName><default>false</default></value><value><fullName>Medium</fullName><default>false</default></value><value><fullName>Low</fullName><default>false</default></value><value><fullName>Not Eligible</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>