salesforce/main/default/objects/Account/fields/FundOps_Refresh_Requested__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Refresh_Requested__c</fullName>
  <label>FundOps Refresh Requested</label>
  <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>