salesforce/main/default/objects/Account/fields/FundOps_Summary__c.field-meta.xml
<CustomField>
  <fullName>FundOps_Summary__c</fullName>
  <label>FundOps Summary</label>
  <type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines>
</CustomField>